fix(ui): increase select2 z-index to avoid hidden list in the widgets

--- a/www/include/common/javascript/jquery/plugins/select2/css/select2.css
+++ b/www/include/common/javascript/jquery/plugins/select2/css/select2.css
@@ -1,5 +1,5 @@
 /* Caution in the original lib the ".select2-dropdown" z-index was 1051 but as the popup has a z-index of 1053 and
- to avoid impacts in the other pages or popups, we modified this z-index to 1061 */
+ to avoid impacts in the other pages or popups, we modified this z-index to 1065 */
 .select2-container {
   box-sizing: border-box;
   display: inline-block;
@@ -59,8 +59,8 @@
   left: -100000px;
   width: 100%;
   /* caution in the original lib the z-index was 1051 but as the popup has a z-index of 1053 and to avoid
-  impacts in the other pages or popup, we modified this z-index to 1061 */
-  z-index: 1061; }
+  impacts in the other pages or popup, we modified this z-index to 1065 */
+  z-index: 1065; }
 
 .select2-results {
   display: block; }
